--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
+    "readable-stream": "^3.6.0",
     "roboto-fontface": "*",
     "v-network-graph": "^0.5.18",
     "vue": "^3.2.13",
