--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
   "dependencies": {
     "@mdi/font": "5.9.55",
     "axios": "^0.27.2",
+    "primeicons": "^5.0.0",
+    "primevue": "^3.15.0",
     "readable-stream": "^3.6.0",
     "roboto-fontface": "*",
     "v-network-graph": "^0.5.18",
     "vue": "^3.2.13",
     "vue-router": "^4.0.13",
-    "vuetify": "^3.0.0-beta.0",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "webpack-plugin-vuetify": "^2.0.0-alpha.10"
   },
   "devDependencies": {
     "@types/webfontloader": "^1.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
-    "typescript": "~4.5.5",
-    "vue-cli-plugin-vuetify": "~2.5.1",
-    "webpack-plugin-vuetify": "^2.0.0-alpha.0"
+    "typescript": "~4.5.5"
   },
   "browserslist": [
     "> 1%",
